js not working, css broke

--- a/index.html
+++ b/index.html
@@ -10,65 +10,65 @@
 <body>
     <header>
         <div id='headerLogo'>
-            <img src='https://via.placeholder.com/200x70'>
+            <!-- <img src='https://img.icons8.com/ios/50/000000/bus.png'> -->
         </div>
         <div>
             <h1>Bus Mall</h1>
+            <p>Delivered at next stop! guaranteed!</p>
         </div>
     </header>
-    <div>
-        <div id='results'>
+    <main>
+        <div id='rank'>
             <p>Results</p>
-            <ul>
-                <li>image1 votes</li>
-                <li>image2 votes</li>
-                <li>image3 votes</li>
-                <li>image4 votes</li>
-                <li>image5 votes</li>
-                <li>image6 votes</li>
-                <li>image7 votes</li>
-                <li>image8 votes</li>
-                <li>image9 votes</li>
-                <li>image10 votes</li>
-                <li>image11 votes</li>
-                <li>image12 votes</li>
-                <li>image13 votes</li>
-                <li>image14 votes</li>
-                <li>image15 votes</li>
-                <li>image16 votes</li>
-                <li>image17 votes</li>
-                <li>image18 votes</li>
-                <li>image19 votes</li>
-                <li>image20 votes</li>
+            <ul id='ranking'>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
+                <li>hfshfoeh</li>
             </ul>
         </div>
-        <div id ='rightside'>
+        <div>
             <section>
-                <div id='image1'>
+                <h2>Click to vote!</h2>
+                <div id='img1'>
                     <img src='https://via.placeholder.com/240x250'>
                 </div>
-                <div id='image2'>
+                <div id='img2'>
                     <img src='https://via.placeholder.com/240x250'>
                 </div>
-                <div id='image3'>
+                <div id='img3'>
                     <img src='https://via.placeholder.com/240x250'>
                 </div>
             </section>
-        </div>
             <div id='descriptionBox'>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at ultrices tellus,<br>
                     a placerat sem. Ut hendrerit tortor ut leo euismod condimentum. Vestibulum blandit <br>
                     nisi consequat elementum posuere. Sed vitae arcu nec libero tincidunt interdum ut <br>
                     eget turpis. Aliquam a nulla luctus, viverra sapien vitae, vestibulum augue. Vivamus <br>
-                    gravida nibh ut dapibus rhoncus. In non accumsan nisi. Nunc feugiat libero a eros sollicitudin, vel vestibulum sem gravida. Morbi vitae eleifend quam. Aliquam erat volutpat. Cras justo enim, consectetur eget magna non, molestie eleifend odio. Praesent lobortis diam et lorem feugiat euismod. Praesent justo purus, varius quis dapibus nec, auctor in leo. Nunc diam ligula, elementum sed eros in, dapibus faucibus sapien.
+                    gravida nibh ut dapibus rhoncus. In non accumsan nisi. Nunc feugiat libero a eros <br>
+                    sollicitudin, vel vestibulum sem gravida. Morbi vitae eleifend quam. Aliquam erat volutpat.<br>
+                     Cras justo enim, consectetur eget magna non, molestie eleifend odio. Praesent lobortis diam et <br>
+                     lorem feugiat euismod. Praesent justo purus, varius quis dapibus nec, auctor in leo. Nunc diam ligula,<br>
+                      elementum sed eros in, dapibus faucibus sapien.
                 </p>
             </div>
         </div>
-    </div>
+    </main>
     <footer>
-        <p></p>
+        <p>footer</p>
     </footer>
-    
+    <script src='js/app.js'></script>
 </body>
 </html>
