--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id='headerLogo'>
-            <!-- <img src='https://img.icons8.com/ios/50/000000/bus.png'> -->
+            <img src='https://img.icons8.com/ios/50/000000/bus.png'>
         </div>
         <div>
             <h1>Bus Mall</h1>
@@ -41,14 +41,14 @@
         <div>
             <section>
                 <h2>Click to vote!</h2>
-                <div id='img1'>
-                    <img src='https://via.placeholder.com/240x250'>
+                <div>
+                    <img id='img1' src='https://via.placeholder.com/240x250'>
                 </div>
-                <div id='img2'>
-                    <img src='https://via.placeholder.com/240x250'>
+                <div>
+                    <img id='img2' src='https://via.placeholder.com/240x250'>
                 </div>
-                <div id='img3'>
-                    <img src='https://via.placeholder.com/240x250'>
+                <div>
+                    <img id='img3' src='https://via.placeholder.com/240x250'>
                 </div>
             </section>
             <div id='descriptionBox'>
