added my data array and loop to get numclicked but still not displaying

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div>
             <h1>Bus Mall</h1>
-            <p>Delivered at next stop! guaranteed!</p>
+            <p>Quality guaranteed!</p>
         </div>
     </header>
     <main>
@@ -41,7 +41,7 @@
         </div>
         <div>
             <section>
-                <h2>Click to vote!</h2>
+                <h2>Click to vote! You have 25 votes!</h2>
                 <div>
                     <img id='img1' src='https://via.placeholder.com/240x250'>
                 </div>
