fixed local storage and added css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id='headerLogo'>
             <img src='https://img.icons8.com/ios/50/000000/bus.png'>
         </div>
-        <div>
+        <div id='headerText'>
             <h1>Bus Mall</h1>
             <p>Quality guaranteed!</p>
         </div>
@@ -21,25 +21,9 @@
     <main>
         <div id='rank'>
             <p>Results</p>
-            <ul id='ranking'>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-                <li>hfshfoeh</li>
-            </ul>
+            <ul id='ranking'></ul>
         </div>
-        <div>
+        <div id=pictureWords>
             <section>
                 <h2>Click to vote! You have 25 votes!</h2>
                 <div>
@@ -59,9 +43,9 @@
                     nisi consequat elementum posuere. Sed vitae arcu nec libero tincidunt interdum ut <br>
                     eget turpis. Aliquam a nulla luctus, viverra sapien vitae, vestibulum augue. Vivamus <br>
                     gravida nibh ut dapibus rhoncus. In non accumsan nisi. Nunc feugiat libero a eros <br>
-                    sollicitudin, vel vestibulum sem gravida. Morbi vitae eleifend quam. Aliquam erat volutpat.<br>
-                     Cras justo enim, consectetur eget magna non, molestie eleifend odio. Praesent lobortis diam et <br>
-                     lorem feugiat euismod. Praesent justo purus, varius quis dapibus nec, auctor in leo. Nunc diam ligula,<br>
+                    sollicitudin, vel vestibulum sem gravida. Morbi vitae eleifend quam. Aliquam erat <br> 
+                    volutpat. Cras justo enim, consectetur eget magna non, molestie eleifend odio. Praesent <br>
+                     lobortis diam et lorem feugiat euismod. Praesent justo purus, varius quis dapibus nec, <br>auctor in leo. Nunc diam ligula,
                       elementum sed eros in, dapibus faucibus sapien.
                 </p>
             </div>
